# deliveryops-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/schemas/: delivery_state.py
app/tools/: git_tools.py
docs/: DEMO_SCRIPT.md  KNOWN_LIMITATIONS.md  MANUAL_E2E_TEST.md  MVP_RELEASE_CANDIDATE.md  MVP_RELEASE_NOTES.md  V010_FINAL_CHECKLIST.md  WORKFLOW_OVERVIEW.md
src/app/: config.py  main.py  state_store.py
src/app/agents/: __init__.py  role_registry.py
src/app/policies/: tool_policy.py
src/app/schemas/: agent_patch_response.py  agent_role.py  approval_record.py  (+20 more)
src/deliveryops_agent/: __init__.py
tests/: test_agent_role_tools.py  test_apply_patch_tools.py  test_approval_request_tools.py  test_approval_tools.py  test_architecture_review_tools.py  test_auto_continue_tools.py  test_branch_name_tools.py  test_ci_tools.py  test_commit_message_tools.py  test_commit_tools.py  test_delivery_report_tools.py  test_diff_tools.py  test_docs_exist.py  test_fix_patch_loop_tools.py  test_git_tools.py  test_github_tools.py  test_issue_body_tools.py  test_issue_comment_tools.py  test_markdown_tracking_tools.py  test_patch_file_tools.py  test_patch_generator_tools.py  test_patch_proposal_tools.py  test_patch_sanitizer_tools.py  test_patch_validator_tools.py  test_policy_profile_tools.py  test_pull_request_tools.py  test_push_tools.py  test_release_candidate_tools.py  test_release_judge_tools.py  test_repo_analysis_tools.py  test_repo_context_tools.py  test_smoke_test_tools.py  test_test_failure_analysis_tools.py  test_test_tools.py  test_workflow_resume_tools.py
(+34 files in other folders)
