[project]
name = "deliveryops-agent"
version = "0.1.0"
description = "Agno-powered autonomous software delivery manager"
readme = "README.md"
authors = [
    { name = "serkansonmzz", email = "serkansonmzz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.17",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
deliveryops = "app.main:app"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
